--- a/_notebooks/CSA/units_1_to_10/unit_08/Period3/2024-09-19-8.1.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_08/Period3/2024-09-19-8.1.ipynb
@@ -84,11 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -237,17 +233,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int[][] exampleArray = {\n",
     "    {\"Hello\", \"World\"},\n",
     "    {\"Java\", \"Array\"}\n",
     "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code above is trying to initialize a 2D array of integers with string values. An easy fix would be to change the type of the array to a 2D string array (String[][])."
    ]
   },
   {
@@ -262,14 +261,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int[][] matrix = new int[2][3];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The two 2D array can hold 6 values, since it is 2 rows by 3 columns for a total of 6 different elements."
    ]
   },
   {
@@ -291,6 +293,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "D is the correct answer since both would access the 7th column, 4th row which would be the last MCQ score. However we would need to be careful about option C because the 2D array could be jagged."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Try on your own!\n",
     "\n",
     "Write a code to declare and initialize a 2D array that stores the following matrix:\n",
@@ -301,18 +310,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "public class ArrayPractice {\n",
     "    public static void main(String[] args) {\n",
     "        // Write the code to declare and initialize the 2D array here\n",
-    "\n",
+    "        int[][] array = {\n",
+    "            {1, 2, 3},\n",
+    "            {4, 5, 6},\n",
+    "            {7, 8, 9}\n",
+    "        };\n",
     "        // Print the array\n",
     "        System.out.println(java.util.Arrays.deepToString(array));\n",
     "    }\n",
@@ -335,11 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int[][] matrix = {\n",
@@ -363,19 +376,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Programming"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "String[][] hack = {\n",
     "    {\"Hello\", \"World\"},\n",
     "    {\"Java\", \"Array\"}\n",
     "};\n",
     "\n",
-    "//Insert code below:"
+    "//Insert code below:\n",
+    "hack[1][0] = \"Programming\";"
    ]
   },
   {
@@ -411,9 +432,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
-   "version": "17.0.12+7-Ubuntu-1ubuntu224.04"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
