--- a/_notebooks/CSA/units_1_to_10/unit_08/Period3/2024-09-18-8.2.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_08/Period3/2024-09-18-8.2.ipynb
@@ -171,7 +171,6 @@
     "for (int i = 0; i < Array1.length; i++) {\n",
     "    // This makes the variable i equal to 0, then the condition would be when i is less than the Array1 length, \n",
     "    // then it will loop to the next number, then add 1 to i.\n",
-    "    \n",
     "    for (int j = 0; j < Array1[i].length; j++) {\n",
     "        System.out.println(Array1[i][j]);\n",
     "    }\n",
@@ -268,13 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 55 at index 1, 1\n"
+     ]
+    }
+   ],
    "source": [
     "public class Main {\n",
     "    public static void main(String[] args) {\n",
@@ -285,6 +292,14 @@
     "        };\n",
     "\n",
     "        // Write your code here\n",
+    "        int search = 55;\n",
+    "        for (int i = 0; i < find.length; i++) {\n",
+    "            for (int j = 0; j < find[i].length; j++) {\n",
+    "                if (find[i][j] == search) {\n",
+    "                    System.out.println(\"Found \" + search + \" at index \" + i + \", \" + j);\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "Main.main(null);"
@@ -317,13 +332,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 1\n",
+      "1\n",
+      "4\n",
+      "7\n",
+      "Column 2\n",
+      "2\n",
+      "5\n",
+      "8\n",
+      "Column 3\n",
+      "3\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "public class Main {\n",
     "    public static void main(String[] args) {\n",
@@ -357,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -419,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -492,20 +526,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element found at: Row 4, Column 4\n"
+     ]
+    }
+   ],
    "source": [
     "public class Main {\n",
     "    public static void main(String[] args) {\n",
     "        int[][] array = {\n",
+    "            {1, 2, 3, 4, 5},\n",
+    "            {6, 7, 8, 9, 10},\n",
+    "            {11, 12, 13, 14, 15},\n",
+    "            {16, 17, 18, 19, 20},\n",
+    "            {21, 22, 23, 24, 25}\n",
+    "        };\n",
+    "        int target = 25;\n",
+    "        int[] result = binarySearch2D(array, target);\n",
+    "        \n",
+    "        if (result[0] != -1) {\n",
+    "            System.out.println(\"Element found at: Row \" + result[0] + \", Column \" + result[1]);\n",
+    "        } else {\n",
+    "            System.out.println(\"Element not found.\");\n",
     "        }\n",
     "    }\n",
+    "    \n",
+    "    public static int[] binarySearch2D(int[][] array, int target) {\n",
+    "        int rows = array.length;\n",
+    "        if (rows == 0) return new int[] {-1, -1};\n",
+    "        int cols = array[0].length;\n",
+    "        \n",
+    "        int left = 0;\n",
+    "        int right = rows * cols - 1;\n",
+    "        \n",
+    "        while (left <= right) {\n",
+    "            int mid = left + (right - left) / 2;\n",
+    "            int midValue = array[mid / cols][mid % cols];\n",
+    "            \n",
+    "            if (midValue == target) {\n",
+    "                return new int[] {mid / cols, mid % cols}; // Return the row and column index\n",
+    "            }\n",
+    "            if (midValue < target) {\n",
+    "                left = mid + 1; // Move to the right half\n",
+    "            } else {\n",
+    "                right = mid - 1; // Move to the left half\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        return new int[] {-1, -1}; // Target not found\n",
+    "    }\n",
     "}\n",
+    "\n",
     "Main.main(null);"
    ]
   },
@@ -714,28 +795,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element found at: Row 1, Column 1\n"
+     ]
+    }
+   ],
    "source": [
     "public class PopcornHack {\n",
     "    public static void main(String[] args) {\n",
-    "        // Step 1: Create a 2D array\n",
+    "        // Step 1: Create a globally sorted 2D array\n",
     "        int[][] array = {\n",
-    "            { /* Fill in your array data here */ },\n",
-    "            { /* More data */ },\n",
-    "            { /* More data */ }\n",
+    "            {1, 3, 5},\n",
+    "            {7, 9, 11},\n",
+    "            {13, 15, 17}\n",
     "        };\n",
     "\n",
     "        // Step 2: Define your target number\n",
-    "        int target = /* Choose a number to search for */;\n",
+    "        int target = 9;\n",
     "\n",
-    "        // Step 3: Call the search method (choose either linear or binary search)\n",
-    "        int[] result = /* Call your chosen search method here */;\n",
+    "        // Step 3: Call the binary search method\n",
+    "        int[] result = binarySearch2D(array, target);\n",
     "\n",
     "        // Step 4: Output the result\n",
     "        if (result[0] != -1) {\n",
@@ -745,9 +834,31 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    // Option 1: Linear Search (Copy and paste the linear search method here)\n",
-    "    // Option 2: Binary Search (Copy and paste the binary search method here)\n",
-    "}"
+    "    // Option 2: Binary Search on a 2D array\n",
+    "    public static int[] binarySearch2D(int[][] array, int target) {\n",
+    "        int rows = array.length;\n",
+    "        int cols = array[0].length;\n",
+    "        int low = 0;\n",
+    "        int high = rows * cols - 1;\n",
+    "\n",
+    "        while (low <= high) {\n",
+    "            int mid = (low + high) / 2;\n",
+    "            int midElement = array[mid / cols][mid % cols];  // Convert 1D index to 2D\n",
+    "\n",
+    "            if (midElement == target) {\n",
+    "                return new int[]{mid / cols, mid % cols}; // Return row and column\n",
+    "            } else if (midElement < target) {\n",
+    "                low = mid + 1;\n",
+    "            } else {\n",
+    "                high = mid - 1;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        return new int[]{-1, -1};  // If not found, return [-1, -1]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "PopcornHack.main(null);"
    ]
   },
   {
