--- a/_notebooks/CSA/units_1_to_10/unit_07/Period3/2024-09-10-Unit7TeamTeach_Searching&algorithms.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_07/Period3/2024-09-10-Unit7TeamTeach_Searching&algorithms.ipynb
@@ -53,11 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "List<Integer> list1 = new ArrayList<Integer>();\n",
@@ -83,11 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "List<Integer> numList = new ArrayList<Integer>();\n",
@@ -115,11 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class ArrayListExample {\n",
@@ -161,11 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -200,18 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of array: 19\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "public class ArrayListHacks {\n",
     "    private int findSum(ArrayList<Integer> values) {\n",
-    "        // Your code here\n",
-    "        return 0;\n",
+    "        int sum = 0;\n",
+    "        for (int value : values) {\n",
+    "            sum += value;\n",
+    "        }\n",
+    "        return sum;\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
@@ -224,7 +215,8 @@
     "        nums.add(8);\n",
     "\n",
     "        ArrayListHacks hacks = new ArrayListHacks();\n",
-    "        hacks.findSum(nums);\n",
+    "        int total = hacks.findSum(nums);\n",
+    "        System.out.println(\"Sum of array: \" + total);\n",
     "    }\n",
     "}\n",
     "\n",
@@ -249,13 +241,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests of sequentialSearch\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "-1\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "public class ArraySearcher {\n",
     "\n",
@@ -291,13 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "-1\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "public class SearchTest\n",
     "{\n",
@@ -333,8 +338,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "java",
+   "pygments_lexer": "java",
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
