--- a/_notebooks/CSA/units_1_to_10/unit_07/Period3/2024-09-10-Unit7TeamTeach_Sorting.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_07/Period3/2024-09-10-Unit7TeamTeach_Sorting.ipynb
@@ -322,6 +322,33 @@
     "- Implement **either** sorting algorithm to sort the ducks by weight.\n",
     "- Print the sorted list.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DebugDuck implements Comparable<DebugDuck> {\n",
+    "    String name;\n",
+    "    double weight;\n",
+    "\n",
+    "    public DebugDuck(String name, double weight) {\n",
+    "        this.name = name;\n",
+    "        this.weight = weight;\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public int compareTo(DebugDuck other) {\n",
+    "        return Double.compare(this.weight, other.weight);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "        return name + \" (\" + weight + \" kg)\";\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
@@ -336,7 +363,7 @@
    "mimetype": "text/x-java-source",
    "name": "java",
    "pygments_lexer": "java",
-   "version": "17.0.12+7"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
