--- a/_notebooks/CSA/units_1_to_10/unit_07/Period3/2024-09-10-Unit7TeamteachPeriod3.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_07/Period3/2024-09-10-Unit7TeamteachPeriod3.ipynb
@@ -60,11 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import java.util.ArrayList;  // Import the ArrayList class\n",
@@ -86,11 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ArrayList<String> wordList = new ArrayList<String>(); // with data type\n",
@@ -120,13 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "ArrayList<String> sizeList = new ArrayList<String>();\n",
     "System.out.println(sizeList.size());"
@@ -144,13 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[CSA]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "ArrayList<String> addList = new ArrayList<String>();\n",
     "addList.add(\"CSA\");\n",
@@ -184,11 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ArrayList<Integer> a1 = new ArrayList<>();\n",
@@ -220,11 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import java.util.ArrayList;\n",
@@ -277,6 +270,62 @@
     "\n",
     "At the end of each task, print the current state of the ArrayList to verify the result."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of list: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
+    "ArrayList<String> fruits = new ArrayList<>();\n",
+    "fruits.add(\"Apple\");\n",
+    "fruits.add(\"Banana\");\n",
+    "fruits.add(\"Cherry\");\n",
+    "fruits.add(\"Date\");\n",
+    "fruits.add(\"Elderberry\");\n",
+    "\n",
+    "System.out.println(\"Length of list: \" + fruits.size());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**POPCORN HACKS 7.6**\n",
+    "You have a list of ducks, and each duck has a **name** and **weight**. Your task is to sort these ducks by weight in **ascending order**.\n",
+    "\n",
+    "Choose **either Selection Sort or Insertion Sort** to do the sorting.\n",
+    "\n",
+    "### Example:\n",
+    "Given this list:\n",
+    "- Duck A (4.5 kg)\n",
+    "- Duck B (2.1 kg)\n",
+    "- Duck C (5.0 kg)\n",
+    "- Duck D (1.9 kg)\n",
+    "\n",
+    "After sorting, the output should be:\n",
+    "- Duck D (1.9 kg)\n",
+    "- Duck B (2.1 kg)\n",
+    "- Duck A (4.5 kg)\n",
+    "- Duck C (5.0 kg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -289,9 +338,9 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
-   "version": "17.0.12+7"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
