--- a/_notebooks/CSA/units_1_to_10/unit_09/Period3/2023-09-12-U9-6.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_09/Period3/2023-09-12-U9-6.ipynb
@@ -52,13 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4330127018922193\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "public class Shape {\n",
     "    protected String name;\n",
@@ -140,6 +144,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Circle extends Shape {\n",
+    "    private int radius;\n",
+    "\n",
+    "    // Constructor that takes a name and radius\n",
+    "    public Circle(String name, int radius) {\n",
+    "        super(name, 0, 0); // Call to Shape constructor to set the name\n",
+    "        this.name = \"circle\";\n",
+    "        this.radius = radius;\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public double calc_area() {\n",
+    "        return Math.PI * radius * radius;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -158,11 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Shape {\n",
@@ -242,11 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Shape {\n",
@@ -285,7 +304,9 @@
    "source": [
     "## Popcorn Hacks\n",
     "* Define **down-casting** in your own words\n",
-    "* add an example of down-casting to your previous polymorphism example"
+    "* add an example of down-casting to your previous polymorphism example\n",
+    "\n",
+    "down-casting: "
    ]
   },
   {
@@ -314,11 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Water {\n",
@@ -350,11 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Shape{\n",
@@ -393,11 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Electronic{\n",
@@ -425,11 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Electronic{\n",
@@ -460,11 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Furniture{\n",
@@ -506,11 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Sport{\n",
@@ -554,11 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Fruit{\n",
@@ -592,7 +585,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
