--- a/_notebooks/CSA/units_1_to_10/unit_09/Period3/2024-09-12-U9-1.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_09/Period3/2024-09-12-U9-1.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,11 +235,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "/* Your code goes in here. Copy paste the code cell above  and your new implementations here */"
+    "/* Your code goes in here. Copy paste the code cell above  and your new implementations here */\n",
+    "public class Circle extends Shape {\n",
+    "    public Circle () {\n",
+    "        super();\n",
+    "    }\n",
+    "    public Circle (int radius) {\n",
+    "        super(\"Circle\", radius, radius);\n",
+    "    }\n",
+    "    public double calc_area() {\n",
+    "        return (3.14 * this.get_length() * this.get_width());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Hexagon extends Shape {\n",
+    "    public Hexagon () {\n",
+    "        super();\n",
+    "    }\n",
+    "    public Hexagon (int side) {\n",
+    "        super(\"Hexagon\", side, side);\n",
+    "    }\n",
+    "    public double calc_area() {\n",
+    "        return (3 * Math.sqrt(3) * this.get_length() * this.get_length() / 2);\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -444,9 +467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "java (IJava/j!)",
+   "display_name": "Java",
    "language": "java",
-   "name": "jbang-ijava"
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": "java",
@@ -454,7 +477,7 @@
    "mimetype": "text/x-java-source",
    "name": "java",
    "pygments_lexer": "java",
-   "version": "22.0.2"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
