--- a/_notebooks/CSA/units_1_to_10/unit_09/Period3/2024-09-12-U9-3.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_09/Period3/2024-09-12-U9-3.ipynb
@@ -39,12 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Shape {\n",
@@ -135,12 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Triangle extends Shape {\n",
@@ -210,12 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Triangle extends Shape {\n",
@@ -244,11 +232,14 @@
     "    public double calc_area() {\n",
     "        double area = 0.0;\n",
     "        //Write Code Here\n",
+    "        double s = (side1 + side2 + side3) / 2.0;\n",
+    "        area = Math.sqrt(s * (s - side1) * (s - side2) * (s - side3));\n",
     "        return area;\n",
     "        //expected output 6\n",
     "    }\n",
     "    \n",
-    "}"
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -262,25 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: triangle\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Area of t1 = 0.0\n"
+      "Shape: triangle\n",
+      "Area of t1 = 6.0\n"
      ]
     }
    ],
@@ -319,11 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Triangle extends Shape {\n",
@@ -364,11 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -408,12 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -485,11 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Triangle extends Shape {\n",
@@ -544,17 +509,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "java (IJava/j!)",
+   "display_name": "Java",
    "language": "java",
-   "name": "jbang-ijava"
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
-   "version": "22.0.2"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
