comments for unit 5

--- a/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-16-unit_5-classanatomy.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-16-unit_5-classanatomy.ipynb
@@ -14,7 +14,8 @@
     "description: Unit 5 Classes and Objects -  Anatomy\n",
     "toc: True\n",
     "menu: nav/CSA_Units/csa_unit5_p3.html\n",
-    "permalink: /csa/unit5/5.1/"
+    "permalink: /csa/unit5/5.1/\n",
+    "comments: true"
    ]
   },
   {
