--- a/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-22-unit_5-home.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-22-unit_5-home.ipynb
@@ -16,6 +16,7 @@
     "courses: {'csa': {'week': 6}}\n",
     "permalink: /csa/unit5/\n",
     "menu: nav/CSA_Units/csa_unit5_p3.html\n",
+    "comments: true\n",
     "---"
    ]
   },
