--- a/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-15-unit_5-constructors.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-15-unit_5-constructors.ipynb
@@ -15,6 +15,7 @@
     "toc: True\n",
     "permalink: /csa/unit5/5.2/\n",
     "menu: nav/CSA_Units/csa_unit5_p3.html\n",
+    "comments: true\n",
     "---"
    ]
   },
