--- a/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-17-unit_5-mutator-methods.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-17-unit_5-mutator-methods.ipynb
@@ -15,7 +15,7 @@
     "toc: True\n",
     "permalink: /csa/unit5/5.5/\n",
     "menu: nav/CSA_Units/csa_unit5_p3.html\n",
-    "\n",
+    "comments: true\n",
     "---"
    ]
   },
