--- a/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-17-unit_5-writing-methods.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_05/Period3/2024-09-17-unit_5-writing-methods.ipynb
@@ -16,6 +16,7 @@
     "Authors: Aashray, Lilian, Matthew, Tara, and Trevor\n",
     "permalink: /csa/unit5/5.6/\n",
     "menu: nav/CSA_Units/csa_unit5_p3.html\n",
+    "comments: true\n",
     "---"
    ]
   },
